<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView_enable_single_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_single_day"
        android:textSize="@dimen/title_little"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="@dimen/wide_margin"
        android:layout_marginTop="29dp"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_enable_single_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/wide_margin"/>

    <TextView
        android:id="@+id/textView_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="@dimen/text_main"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="@dimen/wide_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/wide_margin"
        android:paddingTop="@dimen/basic_margin"
        android:paddingBottom="@dimen/basic_margin"
        android:layout_below="@id/textView_enable_single_date"/>

    <TextView
        android:id="@+id/textView_start_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/text_main"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="@dimen/wide_margin"
        android:layout_toEndOf="@id/textView_start_date"
        android:paddingEnd="@dimen/wide_margin"
        android:paddingTop="@dimen/basic_margin"
        android:paddingBottom="@dimen/basic_margin"
        android:layout_below="@id/textView_enable_single_date"
        android:gravity="end"
        tools:text="2017年12月28日，星期四"/>

    <TextView
        android:id="@+id/textView_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="@dimen/text_main"
        android:textColor="@color/colorAccent"
        android:paddingTop="@dimen/basic_margin"
        android:paddingBottom="@dimen/basic_margin"
        android:layout_marginStart="@dimen/wide_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_below="@id/textView_start_date"/>

    <TextView
        android:id="@+id/textView_end_date_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_toEndOf="@id/textView_end_date"
        android:paddingTop="@dimen/basic_margin"
        android:paddingBottom="@dimen/basic_margin"
        android:paddingEnd="@dimen/wide_margin"
        android:textSize="@dimen/text_main"
        android:layout_below="@+id/textView_start_date"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        tools:text="2017年12月28日，星期四"/>
</RelativeLayout>