<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.newamber.gracebook.ui.activity.AddAccountActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_addAccount"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:elevation="@dimen/elevation_appbar"
                app:navigationIcon="@drawable/ic_toolbar_back"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/record_an_account"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_addAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/radius_card_4"
            app:cardElevation="@dimen/elevation_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView_icon_amount"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/basic_margin"
                        android:layout_marginStart="@dimen/wide_margin"
                        android:layout_weight="1"
                        android:src="@drawable/ic_record_amount"
                        tools:ignore="ContentDescription"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/basic_margin"
                        android:layout_marginTop="@dimen/wide_margin"
                        android:layout_weight="5"
                        android:hint="@string/hint_amount"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/editText_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:labelFor="@id/editText_amount"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview_budget_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/normal_size"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/wide_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_weight="2"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/colorPrimaryLight"
                        app:cardCornerRadius="@dimen/radius_budget_button"
                        app:cardElevation="@dimen/elevation_card"
                        app:cardMaxElevation="@dimen/basic_margin">

                        <TextView
                            android:id="@+id/textView_budget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/expense"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView_icon_note"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@id/linearLayout_amount"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="@dimen/basic_margin"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_note"
                    tools:ignore="ContentDescription"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout_amount"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/basic_margin"
                    android:layout_toEndOf="@id/imageView_icon_note"

                    android:hint="@string/hint_note"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <EditText
                        android:id="@+id/editText_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:labelFor="@id/editText_note"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/textView_icon_date"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@id/textInputLayout_note"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/ic_record_date"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/text_add_account_padding"
                    tools:ignore="ContentDescription"/>

                <Button
                    android:id="@+id/button_year_month_day"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/normal_size"
                    android:layout_below="@id/textInputLayout_note"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_toEndOf="@id/textView_icon_date"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/wide_margin"
                    android:textColor="@color/colorBlackSecondaryText"
                    android:textSize="@dimen/text_add_account"
                    tools:text="2017年4月23日"/>

                <ImageView
                    android:id="@+id/imageView_icon_moneyRepoType"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@id/textView_icon_date"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/basic_margin"
                    android:paddingStart="@dimen/text_add_account_padding"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_money_repo"
                    tools:ignore="ContentDescription"/>

                <Button
                    android:id="@+id/button_moneyRepoTypes"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/normal_size"
                    android:layout_below="@id/textView_icon_date"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:layout_toEndOf="@id/imageView_icon_moneyRepoType"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/wide_margin"
                    android:textColor="@color/colorBlackSecondaryText"
                    android:textSize="@dimen/text_add_account"
                    tools:text="微信零钱"/>

                <ImageView
                    android:id="@+id/imageView_icon_moneyType"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@id/imageView_icon_moneyRepoType"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_marginStart="@dimen/wide_margin"
                    android:layout_marginTop="@dimen/basic_margin"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/text_add_account_padding"
                    android:src="@drawable/ic_money_type"
                    tools:ignore="ContentDescription"/>

                <Button
                    android:id="@+id/button_moneyTypes"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/normal_size"
                    android:layout_below="@id/imageView_icon_moneyRepoType"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:layout_toEndOf="@id/imageView_icon_moneyRepoType"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/wide_margin"
                    tools:text="网购"
                    android:textColor="@color/colorBlackSecondaryText"
                    android:textSize="@dimen/text_add_account"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_fab_done"
        app:fabSize="normal"
        app:elevation="@dimen/elevation_fab"
        app:layout_anchor="@id/cardView_addAccount"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>